tried to add auth but failed

--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,8 @@
 NODE_ENV=development
 PORT=4000
+
 MONGO_URI=mongodb://localhost/mydatabase
+
+JWT_SECRET=hhj4h545h4j5hj45h5j4h545
+JWT_EXPIRE=2d
+JWT_COOKIE_EXPIRE=2
