--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "My Stater Template for a fully flegged NodeJS Server with a MongoDB Database",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
-    "dev": "nodemon app"
+    "start": "babel-node app",
+    "dev": "nodemon --exec babel-node app"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,9 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.6",
     "nodemon": "^2.0.3"
   }
 }
