--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "starter-node-mongo",
   "version": "1.0.0",
   "description": "My Stater Template for a fully flegged NodeJS Server with a MongoDB Database",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "babel-node app",
-    "dev": "nodemon --exec babel-node app"
+    "start": "babel-node src/",
+    "dev": "nodemon --exec babel-node src/",
+    "test": "NODE_ENV=test mocha -r @babel/register src/tests/index.test.js --exit",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc npm run test"
   },
   "repository": {
     "type": "git",
@@ -19,23 +22,37 @@
   },
   "homepage": "https://github.com/RedJanvier/starter-node-mongo#readme",
   "dependencies": {
-    "bcrypt": "^4.0.0",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.3.1",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.14",
     "mongoose": "^5.9.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.17",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.12.10",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.3",
+    "nyc": "^15.1.0",
     "prettier": "^2.0.5"
   }
 }
